3.11.0/_sources/gallery/ticks/ticklabels_rotation.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/ticks/ticklabels_rotation.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_ticks_ticklabels_rotation.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_ticks_ticklabels_rotation.py:


===================
Rotated tick labels
===================

Rotating tick labels can be useful when the labels are long and overlap with each other.
Adjust the tick properties using `~.Axes.tick_params`: Set the angle in degrees via
the *rotation* parameter. Set the *rotation_mode* parameter to "xtick" / "ytick" to
make the text point towards the tick, see also `~.Text.set_rotation_mode`.

.. GENERATED FROM PYTHON SOURCE LINES 11-39

.. code-block:: Python


    import matplotlib.pyplot as plt

    population = {
        'India': 1417.492,
        'China': 1404.89,
        'United States': 341.784857,
        'Indonesia': 284.438782,
        'Pakistan': 241.499431,
        'Nigeria': 223.8,
        'Brazil': 213.421037,
        'Bangladesh': 169.828911,
        'Russia': 146.028325,
        'Mexico': 131.001723,
        'Japan': 122.95,
        'Philippines': 114.1236,
        'DR Congo': 112.832,
        'Ethiopia': 111.652998,
        'Egypt': 107.868296,
        'Vietnam': 102.3,
    }

    fig, ax = plt.subplots()
    ax.bar(population.keys(), population.values())
    ax.tick_params("x", rotation=45, rotation_mode="xtick")
    ax.set_ylabel("population (millions)")
    plt.show()




.. image-sg:: /gallery/ticks/images/sphx_glr_ticklabels_rotation_001.png
   :alt: ticklabels rotation
   :srcset: /gallery/ticks/images/sphx_glr_ticklabels_rotation_001.png, /gallery/ticks/images/sphx_glr_ticklabels_rotation_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 40-48

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.axes.Axes.tick_params` / `matplotlib.pyplot.tick_params`

.. tags:: component: ticks, plot-type: bar


.. _sphx_glr_download_gallery_ticks_ticklabels_rotation.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: ticklabels_rotation.ipynb <ticklabels_rotation.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: ticklabels_rotation.py <ticklabels_rotation.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: ticklabels_rotation.zip <ticklabels_rotation.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
